--- a/style.css
+++ b/style.css
@@ -325,7 +325,7 @@ footer{
 }
 
 /* Responsividede */
-/* small laptops 1100px+ */
+/* small laptops 1100px para mais */
 @media (max-width:1100px){
     .plans-container{
         width: 92%;
@@ -336,4 +336,69 @@ footer{
     .plan li{
         padding: 3px;
     }
+}
+
+/* Tablet 900px para menos*/
+@media (max-width:900px){
+    .main-banner p{
+        font-size: 30px;
+    }
+    .main-banner h1{
+        font-size: 60px;
+    }
+    .plans-container{
+        display: inline-block;
+    }
+    .plan{
+        display: inline-block;
+        flex: 1;
+        margin: 22px;
+    }
+    .um{
+        min-width: 275px;
+    }
+}
+
+/* Celular 576px */
+@media (max-width:576px){
+    .navbar-itens li{
+    margin-left: 4px;
+    font-size: 15px;
+}
+   .main-banner h1{
+    font-size: 50px;
+   }
+   .main-banner p{
+    font-size: 20px;
+   }
+
+   .services-container ul{
+    flex-direction: column;
+   }
+
+   .local{
+    padding: 8rem 0;
+   }
+   .local h2{
+    font-size: 28px;
+   }
+   .local input[type="text"]{
+    width: 50%;
+    padding: 20px;
+    font-size: 18px;
+    margin-bottom: 15px;
+}
+   .contato textarea{
+    display: block;
+    margin: 0 auto 20px;
+    width: 300px;
+    height: 150px;
+}
+    footer{
+    font-size: 12px;
+   }
+
+   .um{
+    min-width: 275px;
+}
 }
